--- a/Homework/Views/Home/List.cshtml
+++ b/Homework/Views/Home/List.cshtml
@@ -7,6 +7,9 @@
 <table class="table">
     <tr>
         <th>
+            #
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Category)
         </th>
         <th>
@@ -25,6 +28,9 @@
          foreach (var item in Model)
          {
              <tr>
+                 <td>
+                     @Html.DisplayFor(modelItem => item.Number)
+                 </td>
                  <td>
                      @Html.DisplayFor(modelItem => item.Category)
                  </td>
