Get data from DB and display on View

--- a/Homework/Views/Home/List.cshtml
+++ b/Homework/Views/Home/List.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Homework.Models.MoneyList>
+﻿@using Homework.Enums
+@model IEnumerable<Homework.Models.MoneyList>
 
 @{
     Layout = null;
@@ -18,30 +19,35 @@
         <th>
             @Html.DisplayNameFor(model => model.Date)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
         <th></th>
     </tr>
     @if (Model != null)
     {
-         foreach (var item in Model)
-         {
+        foreach (var item in Model)
+        {
+            string category;
+
+            switch (item.Category)
+            {
+                case Category.Expend:
+                    category = "支出";
+                    break;
+                default:
+                    category = "收入";
+                    break;
+            }
              <tr>
                  <td>
                      @Html.DisplayFor(modelItem => item.Number)
                  </td>
                  <td>
-                     @Html.DisplayFor(modelItem => item.Category)
+                     @Html.DisplayFor(modelItem => category)
                  </td>
                  <td>
                      @Html.DisplayFor(modelItem => item.Money)
                  </td>
                  <td>
                      @Html.DisplayFor(modelItem => item.Date)
-                 </td>
-                 <td>
-                     @Html.DisplayFor(modelItem => item.Description)
                  </td>
              </tr>
          }
