--- a/Homework/Models/AccountBookViewModel.Context.tt
+++ b/Homework/Models/AccountBookViewModel.Context.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF6.Utility.CS.ttinclude"#><#@
  output extension=".cs"#><#
 
-const string inputFile = @"SkillTreeHomework.edmx";
+const string inputFile = @"AccountBookViewModel.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
