--- a/Homework/Views/Home/List.cshtml
+++ b/Homework/Views/Home/List.cshtml
@@ -16,21 +16,32 @@
     {
         foreach (var item in Model)
         {
-             <tr>
-                 <td>
-                     @Html.DisplayFor(modelItem => item.Number)
-                 </td>
-                 <td>
-                     @Html.DisplayFor(modelItem => item.Category)
-                 </td>
-                 <td>
-                     @Html.DisplayFor(modelItem => item.Date)
-                 </td>
-                 <td>
-                     @Html.DisplayFor(modelItem => item.Money)
-                 </td>
-             </tr>
-         }
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Number)
+                </td>
+                @ChangeTextColor(item.Category)
+                <td>
+                    @Html.DisplayFor(modelItem => item.Date)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Money)
+                </td>
+            </tr>
+        }
+    }
+</table>
+
+
+@helper ChangeTextColor(string category)
+{
+    var textClass = "text-primary";
+    if (category == "支出")
+    {
+        textClass = "text-danger";
     }
 
-</table>
+    <td class=@textClass>
+        @Html.DisplayFor(modelItem => category)
+    </td>
+}
