--- a/Homework/Views/Home/EditButton.cshtml
+++ b/Homework/Views/Home/EditButton.cshtml
@@ -2,5 +2,5 @@
     Layout = "";
 }
 
-<button type="button" value="Edit" class="btn btn-default">@Html.ActionLink("編輯", "EditPage", "Edit")</button>
+<button type="button" value="Edit" class="btn btn-default">@Html.ActionLink("編輯", "EditPage",new { Controller = "Edit", area = "Backend"})</button>
 
