--- a/Homework/Areas/Backend/Views/Edit/EditPage.cshtml
+++ b/Homework/Areas/Backend/Views/Edit/EditPage.cshtml
@@ -1,8 +1,35 @@
-﻿@model dynamic
+﻿@model Homework.Areas.Backend.Models.SearchList
 
 @{
-    ViewBag.Title = "title";
+    ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    DateTime today = DateTime.Today.Date;
 }
 
-<h2>title</h2>
+@Html.AntiForgeryToken()
+
+<div class="well" style="margin-top: 80px">
+    @using (Ajax.BeginForm("EditPage",new AjaxOptions(){UpdateTargetId = "list"}))
+    {
+        @Html.AntiForgeryToken()
+        <div class="form-group">
+            <label for="date" class="col-sm-2 control-label">日期</label>
+            <div class="col-sm-10">
+                @Html.EditorFor(model => model.Date, new { @class = "form-control", @id = "date", @placeholder = "日期", @text = today })
+                @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-8 col-sm-4">
+                <button type="submit" value="Index" class="btn btn-default">搜尋</button>
+            </div>
+        </div>
+    }
+</div>
+<div id="list">
+    @Html.Action("List") 
+</div>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")"></script>
+}
